# Cache_Simulation

./: .gitignore  CMakeLists.txt  MatMul.cc  README.md  cache.cc  cache.h
testcases/: CMakeLists.txt  testcase6_matmul.cc  testcase6_matmul.out
traces/: Matmul_size_M0_size_N2.t  Matmul_size_M0_size_N5.t
